<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        />

    <ImageView
        android:id="@+id/iv_preview"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:scaleType="centerCrop"
        android:src="@drawable/template"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/gradient_black"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/gradient_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/iv_preview"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gradient_black"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/boldfont"
        android:text="@string/shop_title"
        android:textColor="#ffffff"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/subTitle" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/semiboldfont"
        android:alpha="0.8"
        android:text="@string/shop_desc"
        android:textColor="#ffffff"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@id/buy_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buy_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/go_pro"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="@drawable/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        android:layout_marginStart="12dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buy_button"
        app:layout_constraintBottom_toBottomOf="parent"

        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    <TextView
        android:id="@+id/desc0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_desc0"
        android:textSize="19.2dp"
        android:fontFamily="@font/semiboldfont"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_no_ads"
        android:drawablePadding="5dp"
        />

    <TextView
        android:id="@+id/desc0sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_sub0"
        android:textSize="12dp"
        android:alpha="0.8"
        android:drawableStart="@drawable/ic_check_circle_24"
        android:drawableTint="@android:color/transparent"
        android:fontFamily="@font/regularfont"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc0"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="5dp"
        android:drawablePadding="5dp"
        />

    <TextView
        android:id="@+id/desc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_desc1"
        android:textSize="19.2dp"
        android:fontFamily="@font/semiboldfont"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc0sub"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_all_themes"
        android:drawablePadding="5dp"
        />

    <TextView
        android:id="@+id/desc1sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_sub1"
        android:textSize="12dp"
        android:alpha="0.8"
        android:drawableStart="@drawable/ic_check_circle_24"
        android:drawableTint="@android:color/transparent"
        android:fontFamily="@font/regularfont"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="5dp"
        android:drawablePadding="5dp"
        />

    <TextView
        android:id="@+id/desc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_desc2"
        android:textSize="19.2dp"
        android:fontFamily="@font/semiboldfont"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc1sub"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_pro_features"
        android:drawablePadding="5dp"
        />

    <TextView
        android:id="@+id/desc2sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_sub2"
        android:textSize="12dp"
        android:alpha="0.8"
        android:drawableStart="@drawable/ic_check_circle_24"
        android:drawableTint="@android:color/transparent"
        android:fontFamily="@font/regularfont"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="5dp"
        android:drawablePadding="5dp"
        />

    <TextView
        android:id="@+id/desc3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_desc3"
        android:textSize="19.2dp"
        android:fontFamily="@font/semiboldfont"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc2sub"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_now_playing_screens"
        android:drawablePadding="5dp"
        />

    <TextView
        android:id="@+id/desc3sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_sub3"
        android:textSize="12dp"
        android:alpha="0.8"
        android:drawableStart="@drawable/ic_check_circle_24"
        android:drawableTint="@android:color/transparent"
        android:fontFamily="@font/regularfont"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc3"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="5dp"
        android:drawablePadding="5dp"
        />

    <TextView
        android:id="@+id/desc4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_custom_bg"
        android:textSize="19.2dp"
        android:fontFamily="@font/semiboldfont"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc3sub"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_baseline_wallpaper_24"
        android:drawablePadding="5dp"
        />

    <TextView
        android:id="@+id/desc4sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_custom_bg_desc"
        android:textSize="12sp"
        android:alpha="0.8"
        android:drawableStart="@drawable/ic_check_circle_24"
        android:drawableTint="@android:color/transparent"
        android:fontFamily="@font/regularfont"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc4"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="5dp"
        android:drawablePadding="5dp"
        />

        <Button
            android:id="@+id/restore_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:alpha="0.5"
            android:textAllCaps="false"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/desc4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="30dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



    <ImageView
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="45dp"
        android:layout_marginStart="12dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_close_white_24dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>