<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/template"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="45dp"
        android:layout_marginStart="12dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_close_white_24dp"
        android:background="@drawable/ic_circle_white_24dp"
        android:backgroundTint="#30ffffff"
        />

    <ImageView
        android:id="@+id/gradient_black"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/gradient_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/details"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/black"
        >

        <TextView
            android:id="@+id/descTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_title"
            android:textSize="24dp"
            android:fontFamily="@font/boldfont"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginBottom="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/desc0"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.mursaat.extendedtextview.AnimatedGradientTextView
            android:id="@+id/desc0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_desc0"
            android:textSize="20dp"
            android:fontFamily="@font/boldfont"
            android:textColor="@color/white"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/desc1"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="12dp"
            app:colors="@array/animated_gradient_text_colors"
            app:simultaneousColors="2"
            app:angle="45"
            app:speed="3000"
            app:maxFPS="30"
            />

        <com.mursaat.extendedtextview.AnimatedGradientTextView
            android:id="@+id/desc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_desc1"
            android:textSize="20dp"
            android:fontFamily="@font/boldfont"
            android:textColor="@color/white"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/desc2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="12dp"
            app:colors="@array/animated_gradient_text_colors"
            app:simultaneousColors="2"
            app:angle="45"
            app:speed="3000"
            app:maxFPS="30"
            />

        <com.mursaat.extendedtextview.AnimatedGradientTextView
            android:id="@+id/desc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_desc2"
            android:textSize="20dp"
            android:fontFamily="@font/boldfont"
            android:gravity="center"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buy_button"
            android:layout_marginBottom="24dp"
            app:colors="@array/animated_gradient_text_colors"
            app:simultaneousColors="2"
            app:angle="45"
            app:speed="3000"
            app:maxFPS="30"
            />

    <Button
        android:id="@+id/buy_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_pro"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:padding="15dp"
        android:background="@drawable/buy_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/restore_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="12dp"
        />

    <Button
        android:id="@+id/restore_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restore"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:alpha="0.5"
        android:textAllCaps="false"
        android:fontFamily="@font/regularfont"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>